CSS fix: process info - display flex with center alignment of icon (#759)

--- a/ui/client/stylesheets/userPanel.styl
+++ b/ui/client/stylesheets/userPanel.styl
@@ -80,9 +80,11 @@ sidenavMixin()
     height: 100%
 
 .panel-process-info
+  display flex
   padding: 10px 7px 10px 22px
   .process-info-icon
     display inline-block
+    align-self center
     width 32px
     height 32px
   .process-info-text
